force-app/main/default/objects/Catalogue_Reporting_Period__mdt/Catalogue_Reporting_Period__mdt.object-meta.xml
<CustomObject>
    <label>Catalogue Reporting Period</label>
    <pluralLabel>Catalogue Reporting Periods</pluralLabel>
</CustomObject>