force-app/main/default/objects/Catalogue_Reporting_Period__mdt/fields/Reporting_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_End_Date__c</fullName>
    <label>Reporting Period End Date</label>
    <type>Date</type>
</CustomField>