force-app/main/default/objects/Catalogue_Reporting_Period__mdt/listViews/Quarterly_Periods.listView-meta.xml
<ListView>
    <fullName>Quarterly_Periods</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Report_Type__c</columns>
    <columns>Reporting_Period_End_Date__c</columns>
    <columns>Reporting_Period_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Report_Type__c</field>
        <operation>equals</operation>
        <value>Quarterly</value>
    </filters>
    <label>Quarterly Periods</label>
    <language>en_US</language>
</ListView>